# google-a2a

./: README.md
client/: .env.example  Dockerfile  README.md  hello_client.py  hello_client_oauth.py  hello_oauth_client.py  streamlit_app.py
server/hello/: README.md  __main__.py  pyproject.toml
server/hello_apikey/: .env.example  Dockerfile  README.md  __main__.py  agent_executor.py  pyproject.toml
server/hello_oauth/: .env.example  README.md  agent_executor.py  pyproject.toml
